--- a/frontend/templates/about_us.html
+++ b/frontend/templates/about_us.html
@@ -29,9 +29,9 @@
                 <p>We aim to build a strong, inspiring community.</p>
                 <p>Together, we celebrate the spirit of our college.</p>
             </div>
-            <div class="illustration-container">
-                <img src="/static/images/about_us.jpg" alt="Illustration of a team meeting" class="illustration">
-            </div>
+            <div class="illustration-wrapper">
+    <img class="illustration" src="/static/images/about_us.jpg" alt="Illustration of a team meeting" />
+</div>
         </section>
 
         <h2 class="team-heading">Team</h2>
