--- a/frontend/static/css/MyProfile.css
+++ b/frontend/static/css/MyProfile.css
@@ -631,3 +631,11 @@ button:active {
   .left-view img,
   .profile-left img { width: 180px; height: 180px; }
 }
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-top: 15px;
+    font-weight: bold;
+    unicode-bidi: isolate;
+}
